[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/orange-kid.regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.184314, 0.223529, 0.356863, 1 )

[node name="TitleText" type="Label" parent="."]
margin_left = 206.0
margin_top = 57.0
margin_right = 434.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "Party Simulator"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 246.0
margin_top = 117.0
margin_right = 393.0
margin_bottom = 243.0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Start Party"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 147.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 147.0
margin_bottom = 47.0

[node name="GuestLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "Number of Guests: 00"

[node name="GuestSlider" type="HSlider" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 147.0
margin_bottom = 47.0
min_value = 1.0
max_value = 20.0
value = 1.0
ticks_on_borders = true

[node name="Name" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 147.0
margin_bottom = 126.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/GuestSlider" to="." method="_on_GuestSlider_value_changed"]
